@@ -78,13 +78,13 @@
             'SQL-Datenbank-Zugangsinformationen (erfordert SQL-Unterstuetzung)',
             'host:port:user:password:datab:table'],
       7 => ['Listen-Moderations-Verzeichnis',
-            'Falls die Liste moderiert wird, ist der vollstaendige Verzeichnispfad zur Moderationsdatenbank erforderlich',
+            'alternatives Verzeichnis zur Moderationsdatenbank',
             '/absoluter/pfad/zur/moderations/datenbank'],
       8 => ['Einschreibungs-Moderations-Verzeichnis',
-            'Falls die Einschreibung in die Liste moderiert wird, ist der vollstaendige Verzeichnispfad zur Einschreibungs-Moderationsdatenbank erforderlich',
+            'alternatives Verzeichnis zur Einschreibungs-Moderationsdatenbank',
             '/absoluter/pfad/zur/abonnenten/moderations/datenbank'],
       9 => ['Administrations-Verzeichnis',
-            'Falls die Liste per Mail administriert wird, ist der vollstaendige Verzeichnispfad zur Administrationsdatenbank erforderlich',
+            'alternatives Verzeichnis zur Administrationsdatenbank',
             '/absoluter/pfad/zur/administrations/datenbank'],
 
 );
@@ -177,7 +177,7 @@
    headerremove          => 'zu entfernende Kopfzeilen',
    headeradd             => 'einzufuegende Kopfzeilen',
    mimeremove            => 'abzuweisende Anhangs-Typen',
-   edittextinfo          => "Das Auswahlfeld links enthaelt die Dateien des <BR>Verzeichnisses DIR/text/. Diese Dateien werden als Antwort auf spezifische Nutzer-Anfragen oder als Teil aller ausgehenden Nachrichten versandt.<P>Um diese Dateien zu veraendern, waehle ihren Namen im Auswahlfeld an. Anschlissnd klicke auf den [$BUTTON{'editfile'}] Schalter.<P>BetäAege [$BUTTON{'cancel'}] um die Veraenderung abzubrechen.",
+   edittextinfo          => "Das Auswahlfeld links enthaelt die Dateien des <BR>Verzeichnisses DIR/text/. Diese Dateien werden als Antwort auf spezifische Nutzer-Anfragen oder als Teil aller ausgehenden Nachrichten versandt.<P>Um diese Dateien zu veraendern, waehle ihren Namen im Auswahlfeld an. Anschliessend klicke auf den [$BUTTON{'editfile'}] Schalter.<P>BetäAege [$BUTTON{'cancel'}] um die Veraenderung zu beenden.",
    editingfile           => 'Bearbeite Datei',
    editfileinfo          => '<BIG><STRONG>ezmlm-manage</STRONG></BIG><BR><TT><STRONG>&lt;#l#&gt;</STRONG></TT> Der Name der Liste<BR><TT><STRONG>&lt;#A#&gt;</STRONG></TT> Die Anmeldungs-Adresse<BR><TT><STRONG>&lt;#R#&gt;</STRONG></TT> Die Bestaetigungs-Adresse<P><BIG><STRONG>ezmlm-store</STRONG></BIG><BR><TT><STRONG>&lt;#l#&gt</STRONG></TT> Der Name der Liste<BR><TT><STRONG>&lt;#A#&gt;</STRONG></TT> Die Zusage-Adresse<BR><TT><STRONG>&lt;#R#&gt;</STRONG></TT> Die Ablehungs-Adresse</UL>',
    mysqlcreate           => 'Lege die MySQL-Datenbank an, falls erforderlich',
